<?xml version="1.0"?>
<package format="3">
  <name>lucia_slam_toolbox</name>
  <version>0.0.1</version>
  <description>LiDARの/scanデータを用いたslam_toolboxによる環境地図作成パッケージ</description>

  <maintainer email="your_email@example.com">Haruki Isono</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <!-- slam_toolbox自体はシステムパッケージとしてインストールしている前提 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
